# SparsifyPoseGraph

./: CMakeLists.txt  README.md
cmake/: FindEigen3.cmake  FindG2O.cmake  FindISAM.cmake  FindLBFGS.cmake
datasets/: duderstadt.g2o  eecs.g2o  flat_duderstadt.g2o  flat_eecs.g2o  intel.g2o  killian.g2o  manhattan.g2o  parking_fixed.g2o  sphere.g2o
scripts/: checkcomplete.py  db_values_chi2.sql  db_values_kld.sql  dbscheduler.py  inputgenerator.sh  randsplit.py  stillrunning.py
src/: auto_delete_map.h  compute_substitute_edge.cpp  compute_substitute_edge.h  decimation.cpp  decimation.h  edge_info.h  edge_types.cpp  evaluate.cpp  evaluate.h  flameprofiler.h  glc_edge.cpp  glc_edge.h  glc_reparam.h  glc_reparam_binary.h  glc_reparam_binary.hpp  glc_reparam_se2.h  glc_reparam_se3.h  graph_wrapper.h  graph_wrapper_g2o.cpp  graph_wrapper_g2o.h  graph_wrapper_isam.cpp  graph_wrapper_isam.h  info_block_solver.h  isometryxd.cpp  isometryxd.h  kld_compare.cpp  logdet_function.cpp  logdet_function.h  main.cpp  multi_edge_correlated.h  multi_edge_correlated.hpp  optimizer.cpp  optimizer.h  pseudo_chow_liu.cpp  pseudo_chow_liu.h  se2_compatibility.h  se3_compatibility.h  sparsity_options.h  stopwatch.h  test_glc_kld.cpp  (+22 more)
src/pqn/: function.h  line_search.cpp  line_search.h  pqn_general.cpp  pqn_general.h  pqn_optimizer.cpp  pqn_optimizer.h  pqn_optimizer_options.h
